--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   loading: ^1.0.2
+  infinite_scroll_pagination: ^3.0.1
   dio: ^3.0.10
   flutter_modular: any
   flutter_mobx: ^1.1.0+2
