--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   loading: ^1.0.2
-  infinite_scroll_pagination: ^3.0.1
+  expansion_card: ^0.1.0
+  flip_card: ^0.4.4
   dio: ^3.0.10
   flutter_modular: any
   flutter_mobx: ^1.1.0+2
